frontend/test/should_fail/index_count_same_argument_mismatch.grg
#using "index_count_model.gm"

rule i {
	if{ countNodesFromIndexSame(fooi, new O()) > 0; }
	
	modify {
	}
}
